--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Página do Curso de HTML e CSS/title>
 </head>
 <body>
+    <h1>titulo</h1>
+    <ul>
+<li>
+lista
+</li>
+
+    </ul>
 </body>
 </html>
 
